[gd_scene load_steps=7 format=2]

[ext_resource path="res://Main.gd" type="Script" id=1]
[ext_resource path="res://TextLabel.tscn" type="PackedScene" id=2]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.231373, 0.454902, 0.6, 1 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0, 0.458824, 0.580392, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.235294, 0.690196, 0.933333, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 448, 216 )

[sub_resource type="StyleBoxFlat" id=4]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0, 0.219608, 0.435294, 1 )

[node name="Main" type="Node2D"]
script = ExtResource( 1 )

[node name="PanelBG" type="Panel" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="PanelBG"]
margin_left = 32.0
margin_top = 144.0
margin_right = 45.0
margin_bottom = 311.0
rect_scale = Vector2( 1.5, 1.5 )
text = "T
Y
P
E

W
O
R
D
S"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelEntered" type="Panel" parent="."]
margin_left = 80.0
margin_top = 64.0
margin_right = 976.0
margin_bottom = 496.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="PanelEntered"]
visible = false
position = Vector2( 448, 216 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="PanelEntered/Area2D"]
shape = SubResource( 3 )

[node name="TextSpawner" type="Node2D" parent="."]

[node name="TextLabel" parent="TextSpawner" instance=ExtResource( 2 )]
margin_left = 302.0
margin_top = -44.0
margin_right = 398.0
margin_bottom = -12.0

[node name="TextLabel2" parent="TextSpawner" instance=ExtResource( 2 )]
margin_left = 486.0
margin_top = -100.0
margin_right = 582.0
margin_bottom = -68.0
text = "godot"

[node name="TextLabel3" parent="TextSpawner" instance=ExtResource( 2 )]
margin_left = 654.0
margin_top = -140.0
margin_right = 750.0
margin_bottom = -108.0
text = "lazy"

[node name="Score" type="Label" parent="."]
margin_left = 216.0
margin_top = 520.0
margin_right = 271.0
margin_bottom = 534.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Score : 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Life" type="Label" parent="."]
margin_left = 232.0
margin_top = 552.0
margin_right = 275.0
margin_bottom = 566.0
rect_scale = Vector2( 1.5, 1.5 )
text = "Life : 5"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="."]
margin_left = 424.0
margin_top = 512.0
margin_right = 630.0
margin_bottom = 576.0
custom_styles/focus = SubResource( 4 )
custom_styles/normal = SubResource( 4 )
smooth_scrolling = true
caret_blink = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
pause_mode = 2
margin_left = 719.0
margin_top = 534.071
margin_right = 786.0
margin_bottom = 560.071
text = "Pause"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="area_entered" from="PanelEntered/Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="PanelEntered/Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="text_changed" from="TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
